--- a/CountryConfirmedSum.html
+++ b/CountryConfirmedSum.html
@@ -20,7 +20,14 @@
 </head>
 
 <body class="all">
+    <div id="nav-placeholder">
 
+    </div>
+    <script>
+        $(function () {
+            $("#nav-placeholder").load("navigation.html");
+        });
+    </script>
     <canvas id="myChart"></canvas>
 
     <div id="showAll" class="row">
