--- a/CountryDeathSum.html
+++ b/CountryDeathSum.html
@@ -18,7 +18,14 @@
 </head>
 
 <body>
-    
+    <div id="nav-placeholder">
+
+    </div>
+    <script>
+        $(function () {
+            $("#nav-placeholder").load("navigation.html");
+        });
+    </script>
     <canvas id="myChart"></canvas>
 
     <div id="showAll" class="row">
