--- a/navigation.html
+++ b/navigation.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="topnav" class="row">
+    <div id="menu" class="row">
     <div class="col-3 p-3 mb-1 bg-primary">
         <a class="text-white" href="/CountryConfirmedSum.html">Γραφική αναπαράσταση κρουσμάτων ανα χώρα συνολικά</a>
     </div>
