--- a/navigation.html
+++ b/navigation.html
@@ -8,7 +8,7 @@
 <body>
     <div id="menu" class="row">
     <div class="col-3 p-3 mb-1 bg-primary">
-        <a class="text-white" href="/CountryConfirmedSum.html">Γραφική αναπαράσταση κρουσμάτων ανα χώρα συνολικά</a>
+        <a class="text-white" href="CountryConfirmedSum.html">Γραφική αναπαράσταση κρουσμάτων ανα χώρα συνολικά</a>
     </div>
     <div class="col-3 p-3 mb-1 bg-primary">
         <a class="text-white" href="">Ημερήσια Γραφική αναπαράσταση κρουσμάτων ανα χώρα </a>
@@ -20,7 +20,7 @@
         <a class="text-white" href="">Παγκόσμια Γραφική αναπαράσταση κρουσμάτων συνολικά</a>
     </div>
     <div class="col-3 p-3 mb-1 bg-primary">
-        <a class="text-white" href="/CountryDeathSum.html">Γραφική αναπαράσταση θανάτων ανα χώρα συνολικά</a>
+        <a class="text-white" href="CountryDeathSum.html">Γραφική αναπαράσταση θανάτων ανα χώρα συνολικά</a>
     </div>
     <div class="col-3 p-3 mb-1 bg-primary">
         <a class="text-white" href="">Ημερήσια Γραφική αναπαράσταση θανάτων ανα χώρα </a>
@@ -32,7 +32,7 @@
         <a class="text-white" href="">Παγκόσμια Γραφική αναπαράσταση θανάτων συνολικά</a>
     </div>
     <div class="col- p-3 mb-1 bg-primary">
-        <a class="text-white" href="/index.html">Αρχική σελίδα</a>
+        <a class="text-white" href="index.html">Αρχική σελίδα</a>
     </div>
 </div>  
 </body>
