--- a/CountryConfirmedSum/CountryConfirmedSum.html
+++ b/CountryConfirmedSum/CountryConfirmedSum.html
@@ -30,10 +30,24 @@
     </script>
     <canvas id="myChart"></canvas>
 
-    <div id="showAll" class="row">
+    <div id="showAll">
 
 
     </div>
+    <script>
+        var optionsCoun;
+        $(function () {
+            $("#showAll").load("../addCountryToChart.html");
+        });
+
+    </script>
+    <div class="row" >
+       
+            <div id="selectedCoun" style=" background-color: cornsilk; width: 100%; height: fit-content;">
+
+            </div>
+        </div>
+    
 
 
 
